fixed section images not showing when using small width devices

--- a/src/components/AgencyIllustration/agency-illustration.module.scss
+++ b/src/components/AgencyIllustration/agency-illustration.module.scss
@@ -9,3 +9,13 @@
         }
     }
 }
+
+.centered{
+    transform-origin: center;
+    transform-box: fill-box;
+}
+
+.bottom-centered{
+    transform-origin: center bottom;
+    transform-box: fill-box;
+}
