--- a/src/components/SectionImage/section-image.module.scss
+++ b/src/components/SectionImage/section-image.module.scss
@@ -13,3 +13,7 @@
         width:40vw;
     }
 }
+
+.image-container{
+    width:100%;
+}
