--- a/src/pages/agency/agency.module.scss
+++ b/src/pages/agency/agency.module.scss
@@ -66,9 +66,6 @@
     > div{
         height:100%;
     }
-    @include breakpoint(lg){
-
-    }
 }
 
 .hero-banner{
